cmake_minimum_required(VERSION 3.6)
find_package(CUDA REQUIRED)
find_package(PythonInterp 3.6 REQUIRED)
find_package(PythonLibs 3.6 REQUIRED)

include_directories(
    ${PYTHON_INCLUDE_DIRS}
    ./pybind11/include
    ../../Common
    )

link_directories(
    /usr/local/cuda/lib64
    )

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

cuda_add_library(numpy_multiply SHARED
  numpy_multiply.cu)

target_link_libraries(numpy_multiply
  ${PYTHON_LIBRARIES}
  cudart)

set_target_properties(numpy_multiply PROPERTIES PREFIX "")
